🐛  Some fixes for broken layouts on mobile (#5329)
* :bug: Add missing responsive attribute

* :bug: Add oerflow-wrap

* :bug: Use pre-wrap instead of pre

* :bug: Fix overflow on flex child

* :lipstick: Increase specificity

--- a/frontend/scss/components/molecules/code-snippet.scss
+++ b/frontend/scss/components/molecules/code-snippet.scss
@@ -48,7 +48,7 @@ Styles taken and combined from: https://raw.githubusercontent.com/richleland/pyg
 
   pre, code {
     @include txt-mono;
-    white-space: pre;
+    white-space: pre-wrap;
     font-size: 0.9rem;
 	  padding: unset;
 	  word-break: initial;
